--- a/physiology.html
+++ b/physiology.html
@@ -60,6 +60,88 @@ Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ 
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> B. Acetylcholine is stored in vesicles and released when an AP in the motor nerve opens Ca++ channels in the presynaptic terminal. ACh diffuses across the synaptic cleft and opens Na+ and K+ channels in the muscle end plate, depolarizing it (but not producing an action potential). Depolarization of the muscle end plate causes local currents in adjacent muscle membrane, depolarizing the membrane to threshold and producing action potentials.</p>
-  
+Which characteristic or component is shared by skeletal muscle and smooth muscle?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Thick and thin filaments arranged in sarcomeres</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Troponin</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Elevation of intracellular [Ca++] for excitation-contraction coupling</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Spontaneous depolarization of the membrane potential</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. High degree of electrical coupling between cells</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. An elevation of intracellular [Ca++] is common to the mechanism of excitation-contraction coupling in skeletal and smooth muscle. In skeletal muscle, Ca++ binds to troponin C, initiating the cross-bridge cycle. In smooth muscle, Ca++ binds to calmodulin. The Ca++-calmodulin complex activates myosin light chain kinase, which phosphorylates myosin so that shortening can occur. The striated appearance of the sarcomeres and the presence of troponin are characteristic of skeletal, not smooth, muscle. Spontaneous depolarizations and gap junctions are characteristics of unitary smooth muscle but not skeletal muscle.</p><br>
+  Repeated stimulation of a skeletal muscle fiber causes a sustained contraction (tetanus). Accumulation of which solute in intracellular fluid is responsible for the tetanus?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Na+</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B.K+ </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Cl-</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Mg++</label><br> 
+    <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Ca++</label><br> 
+    <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Troponin</label><br>
+    <input type="radio" id="G" name="1" value="G">
+    <label for "other">G. Calmodulin</label><br>
+    <input type="radio" id="H" name="1" value="H">
+    <label for="other"> H. Adenosine triphosphate</label><br>
+</form> 
+Answer: <p style="color:white"> E. During repeated stimulation of a muscle fiber, Ca++ is released from the SR more quickly than it can be reaccumulated. The Ca++ does not return to resting levevels as it would after a single twitch. The increased Ca++ allows more cross-bridges to form, and therefore produces increased tension. Intracellular Na+ and K+ concentrations do not change during the action potential. Very few Na+ or K+ ions move into or out of the muscle cell, so bulk concentrations are unaffected. ATP levels would decrease during tetanus.</p><br>
+  Solutions A and B are separated by a membrane that is permeable to Ca++ and impermeable to Cl-. Solution A contains 10mM CaCl<sub>2</sub> and solution B contains 1mM CaCl<sub>2</sub>. Assuming that 2.3RT/F = 60mV, Ca++ will be at electrochemical equilibrium when
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Solution A is +60mV </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Solution A is +30 mV</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Solution A is -60mV</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Solution A is -30mV</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Solution A is +120mV</label><br> 
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Solution A is -120mV</label><br>
+  <input type="radio" id="F" name="1" value="G">
+    <label for="other"> G. The [Ca++] of the two solutions is equal.</label><br>
+  <input type="radio" id="H" name="1" value="H">
+    <label for="other"> H. The concentration of the two solutions are equal.</label><br>
+</form> 
+Answer: <p style="color:white"> D. Solution A is -30mV. The membrane is permeable to Ca++ but impermeable to Cl-. Although there is a concentration gradient across the membrane for both ions, only Ca++ can diffuse down this gradient. Ca++ will diffuse from solution A to solution B, leaving negative charge behind in solution A. The magnitude of this voltage can be calculated for electrochemical equilibrium with the Nernst equation as follows: E<sub>Ca++</sub> = 2.3RT/zF log C<sub>A</sub>/C<sub>B</sub> = 60mV/+2 log10 mM/1mM = 30mV log 10 = 30 mV. The sign is determined with an intuitive approach: Ca++ diffuses from solution A to solution B, so solution A develops a negative voltage (-30mV) Net diffusion of Ca++ will cease when this voltage is achieved; that is, when the chemical driving force is exactly balanced by the electrical driving force.</p><br>
+  A 42-year old man with myasthenia gravis notes increased muscle strength when he is treated with an acetylcholinesterase inhibitor. The basis for his improvement is increased
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. amount of ACh released from motor nerves</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. levels of ACh at the muscle end plates</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. number of ACh receptors on the muscle plates</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. amount of norepinephrine released from motor nerves</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. synthesis of norepinephrine in motor nerves</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. Myasthenia gravis is characterized by a decreased density of ACh receptors at the muscle end plate. An AChE inhibitor blocks degradation of ACh in the neuromuscular junction, so levels at the muscle end plate remain high, partially compensating for the deficiency of receptors.</p>
+ <br>
+  In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 150mM NaCl</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 300 mM mannitol</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 350 mM mannitol</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 300 mM urea</label><br> <input type="radio" id="E" name="1" value="E">
+    <label for="other"> E. 150mM CaCl<sub>2</sub></label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by entry of water and swelling of the cells to the point of rupture. Water would flow into the RBCs if the ECF became hypotonic (lower osmotic pressure) relative to the ICF. Definitionally, isotonic solutions do not cause water to flow in or out of cells because the osmotic pressure is the same on both sides of the cell membrane. Hypertonic solutions would cause shrinkage of the RBCs. 150mM NaCl and 300 mM mannitol are isotonic. 350mM mannitol and 150mM CaCl<sub>2</sub> are hypertonic. Because the reflection coefficient of urea is <1.00, 300mM urea is hypotonic.</p>
 </body>
 </html>
