--- a/development.html
+++ b/development.html
@@ -9,6 +9,10 @@
 <br>
 <b>Aging Milestones</b>
 <br>
+  <i>Infancy and childhood</i><br>
+  Normal physical changes: linear growth, variations in linear growth, including constitutional delay; weight; head circumference; micturition, defecation, primary incontinence/bedwetting, normal physical examination; screening; sleep; teething syndrome<br>
+  Developmental stages: Motor, speech, cognitive, psychosocial, anticipatory guidance<br>
+<br>
 When can an infant first sit up independently?
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -140,5 +144,7 @@ thrombosis (DVT); diabetes mellitus; heart failure, valvular heart disease;hyper
 myasthenia gravis; obesity; pancreatitis; psychiatric disorders; renal calculus/calculi;
 renal failure/renal disease, including SLE; seizure disorders; thyroid disorders,
   hypothyroidism, hyperthyroidism</i><br>
+  Lifestyle and routine preventive care: nutrition, exercise, preventive/travel medicine, risk factors and prevention, routine vaccinations<br>
+ 
 </body>
 </html>
