--- a/blood.html
+++ b/blood.html
@@ -126,9 +126,13 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
   <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
   <b>infectious disorders</b><br>
   <i>bacterial endocarditis, myocarditis</i><br>
+  <i>viral: hemorrhagic fever (Ebola virus, Marburg virus); chikungunya; dengue fever; Zika virus disease</i><br>
+  <i>Primary infections of lymphoid tissue: lymphadenitis (viral, bacterial, fungal, parasitic); lymphangitis; buboes, bubonic plague (</i>Yersinia pestis<i>); cat scratch fever (</i>Bartonella henselae<i>)</i>
   <b>immunologic and inflammatory disorders</b><br>
+  <i>cryoglobinemia, essential mixed cryoglobinemia, autoimmune hemolytic anemia, paroxysmal nocturnal hemoglobinuria, thrombotic thrombocytopenia purpura; hemolytic uremic syndrome</i><br>
   <i>atherosclerosis (eg, atherosclerosis of the aorta)</i><br>
-  <b>Neoplasms: myxoma, metastases</b><br>
+  <b>Neoplasms</b>
+  <i>myxoma, metastases, leukemia, acute (ALL, AML), leukemia, chronic (CLL, CML); lymphoma, Hodgkin disease, non-Hodgkin lymphoma, Burkitt lymphoma, T-cell lymphoma, multiple myeloma, dysproteinemias, monoclonal gammopathy of unknown significance (MGUS); myelfibrosis; myelodysplastic syndrome, myelodysplasias; other immunoproliferative neoplasms (e.g. Waldernstrom macroglobulinemia)</i><br>
   <b>Dysrhythmias</b><br>
   <i>premature beats (PACs, PVCs); atrial flutter/fibrillation; multifocal atrial tachycardia; paroxysmal tachycardias; ventricular tachycardia/fibrillation; wide complex tachycardia; torsades de pointes; bradycardias; atrioventricular block (first-, second-, third-degree); conduction disorder (LBBB, RBBB); cardiac arrest; sick sinus syndrome; prolonged QT syndrome; Wolff-Parkinson-White syndrome; carotid sinus hypersensitivity, pacemaker dysfunction, including failure to sense, capture</i><br>
   <b>Heart failure</b><br>
