--- a/NervousSS.html
+++ b/NervousSS.html
@@ -84,72 +84,57 @@ plexus; carpal/cubital/tarsal/peroneal tunnel syndrome; mononeuritis, Guillain-B
 syndrome; Miller Fisher syndrome; neuropathy (eg, Charcot-Marie-Tooth disease);
 herpes zoster<br>
 <i>Neurologic pain syndromes</i><br>
-complex regional pain syndrome (reflex sympathetic
-dystrophy, causalgia); fibromyalgia; postherpetic neuralgia; phantom limb
+complex regional pain syndrome (reflex sympathetic dystrophy, causalgia); fibromyalgia; postherpetic neuralgia; phantom limb
 pain/syndrome; thalamic pain syndrome; trigeminal neuralgia<br>
 <i>Degenerative disorders/amnestic syndromes</i><br>
-Alzheimer disease; frontotemporal
-dementia, including progressive supranuclear palsy, Lewy body disease; mild
-neurocognitive disorder, mild cognitive impairment<br>
-<i>Global cerebral dysfunction</i>Mbr>
-: altered states of consciousness; delirium; coma/brain death
-Neuromuscular disorders: amyotrophic lateral sclerosis/spinal muscular atrophy; muscular
-dystrophy (eg, Duchenne, myotonic); muscle channelopathies (eg, hypokalemic period
-paralysis)<br>
-Movement disorders: acute dystonia; adult tic disease; essential tremor; Huntington
-disease; Parkinson disease, including Parkinson dementia
-Metabolic disorders: adrenoleukodystrophy; metabolic encephalopathy
-Paroxysmal disorders: headache, including migraine, mixed, tension, ice-pick, cluster,
-medication withdrawal, caffeine withdrawal; seizure disorders, including generalized
-tonic-clonic, partial, absence, febrile
-Sleep disorders: cataplexy and narcolepsy; circadian rhythm sleep-wake disorder;
-insomnia, primary; sleep terror disorder and sleepwalking; REM sleep behavior
-disorder; restless legs syndrome
-Traumatic and mechanical disorders and disorders of increased intracranial pressure:
-anoxic brain damage, cerebral hypoxia; epidural, subdural hematoma (cerebral and
-spinal); intraparenchymal hemorrhage, traumatic subarachnoid hemorrhage; cerebral
-edema; pseudotumor cerebri (idiopathic intracranial hypertension); torticollis/cervical
-dystonia; hydrocephalus, including normal-pressure; traumatic brain injury
-(concussion)/postconcussion syndrome (dementia pugilistica); traumatic brain syndrome
-Congenital disorders: Friedreich ataxia; neural tube defects (eg, spina bifida,
-holoprosencephaly, anencephaly); microcephaly; Sturge-Weber syndrome; tuberous
-sclerosis, von Hippel-Lindau disease; hydrocephalus, obstructive (Arnold-Chiari)
-Adverse effects of drugs on the nervous system: acute dystonic reaction; drug-induced
-meningitis (eg, NSAIDs, sulfa drugs); drug-induced neuropathy (eg, vincristine,
-isoniazid, metronidazole); extrapyramidal adverse effects (eg, akathisia, dystonia,
-drug-induced parkinsonism); neuroleptic malignant syndrome; poisoning by
-psychotropic agents, including antidepressants; serotonin syndrome; tardive
-dyskinesia
-Disorders of the eye and eyelid
-infectious and inflammatory disorders of the eye: blepharitis/eyelid inflammation;
-chalazion; chorioretinitis; conjunctivitis (adenovirus)/keratoconjunctivitis;
-dacryocystitis; endophthalmitis; hordeolum; iridocyclitis; optic neuritis; periorbital
-cellulitis; uveitis
-neoplasms of the eye: melanoma; retinoblastoma
-disorders of the eye and eyelid, structural: cataract; glaucoma; lacrimal system
-disorders; pterygium; refractive disorders (presbyopia, myopia, hyperopia,
-astigmatism)
-disorders of the pupil, iris, muscles (extraocular): amblyopia; strabismus
-disorders of the retina: hypertensive retinopathy; macular degeneration; papilledema;
-retinal detachment; retinitis pigmentosa; vascular disorders affecting the retina,
-11
-including central retinal artery embolus, retinal hemorrhage, amaurosis fugax,
-embolus, carotid artery stenosis, central retinal vein occlusion; visual
-impairment/blindness, night blindness
-traumatic and mechanical disorders: black eye; burn of the eye and adnexa; corneal
-abrasion, ulcer; dislocated lens; foreign body in eye; hyphema; injury to optic nerve
-and pathways; laceration of the eye and eyelid; ocular open wounds; orbital
-fracture; subconjunctival hemorrhage
-adverse effects of drugs on the eyes: ethambutol; hydroxychloroquine; prednisone
-Disorders of the ear
-infectious and inflammatory disorders of the ear: chondritis; mastoiditis; otitis,
-externa, media, interna, serous, suppurative, malignant otitis externa
-neoplasms: acoustic neuroma, neurofibromatosis type 2; cholesteatoma
-hearing loss/deafness: hearing loss, including noise-induced; otosclerosis; tinnitus
-disorders of balance and spatial orientation: Ménière disease; motion sickness; vertigo,
-including benign positional vertigo
-traumatic and mechanical disorders: barotrauma; foreign body in ear; impacted
-cerumen; laceration, avulsion; perforation of tympanic membrane; eustachian
-tube disorders
-adverse effects of drugs on the ear: antineoplastic agents, including cisplatin;
-aminoglycosides; furosemide; salicylates
+Alzheimer disease; frontotemporal dementia, including progressive supranuclear palsy, Lewy body disease; mild neurocognitive disorder, mild cognitive impairment<br>
+<i>Global cerebral dysfunction</i><br>
+altered states of consciousness; delirium; coma/brain death<br>
+  <i>Neuromuscular disorders</i><br>
+  amyotrophic lateral sclerosis/spinal muscular atrophy; muscular dystrophy (eg, Duchenne, myotonic); muscle channelopathies (eg, hypokalemic period paralysis)<br>
+  <i>Movement disorders</i><br>
+  acute dystonia; adult tic disease; essential tremor; Huntington disease; Parkinson disease, including Parkinson dementia<br>
+  <i>Metabolic disorders</i><br>
+  adrenoleukodystrophy; metabolic encephalopathy<br>
+  <i>Paroxysmal disorders</i><br>
+  headache, including migraine, mixed, tension, ice-pick, cluster, medication withdrawal, caffeine withdrawal; seizure disorders, including generalized tonic-clonic, partial, absence, febrile<br>
+  <i>Sleep disorders</i><br>
+  cataplexy and narcolepsy; circadian rhythm sleep-wake disorder; insomnia, primary; sleep terror disorder and sleepwalking; REM sleep behavior disorder; restless legs syndrome<br>
+  <i>Traumatic and mechanical disorders and disorders of increased intracranial pressure:</i><br>
+anoxic brain damage, cerebral hypoxia; epidural, subdural hematoma (cerebral and spinal); intraparenchymal hemorrhage, traumatic subarachnoid hemorrhage; cerebral edema; pseudotumor cerebri (idiopathic intracranial hypertension); torticollis/cervical
+dystonia; hydrocephalus, including normal-pressure; traumatic brain injury (concussion)/postconcussion syndrome (dementia pugilistica); traumatic brain syndrome<br>
+  <i>Congenital disorders</i><br> 
+  Friedreich ataxia; neural tube defects (eg, spina bifida, holoprosencephaly, anencephaly); microcephaly; Sturge-Weber syndrome; tuberous sclerosis, von Hippel-Lindau disease; hydrocephalus, obstructive (Arnold-Chiari)<br>
+  <i>Adverse effects of drugs on the nervous system</i><br>
+  acute dystonic reaction; drug-induced meningitis (eg, NSAIDs, sulfa drugs); drug-induced neuropathy (eg, vincristine,
+isoniazid, metronidazole); extrapyramidal adverse effects (eg, akathisia, dystonia, drug-induced parkinsonism); neuroleptic malignant syndrome; poisoning by psychotropic agents, including antidepressants; serotonin syndrome; tardive dyskinesia<br>
+  <b>Disorders of the eye and eyelid</b><br>
+  <i>infectious and inflammatory disorders of the eye</i><br>
+  blepharitis/eyelid inflammation; chalazion; chorioretinitis; conjunctivitis (adenovirus)/keratoconjunctivitis;
+dacryocystitis; endophthalmitis; hordeolum; iridocyclitis; optic neuritis; periorbital cellulitis; uveitis<br>
+  <i>neoplasms of the eye</i><br>
+  melanoma; retinoblastoma<br>
+  <i>disorders of the eye and eyelid, structural</i><br> 
+  cataract; glaucoma; lacrimal system disorders; pterygium; refractive disorders (presbyopia, myopia, hyperopia, astigmatism)<br>
+  <i>disorders of the pupil, iris, muscles (extraocular)</i><br>
+  amblyopia; strabismus<br>
+  <i>disorders of the retina</i><br>
+  hypertensive retinopathy; macular degeneration; papilledema; retinal detachment; retinitis pigmentosa; vascular disorders affecting the retina, including central retinal artery embolus, retinal hemorrhage, amaurosis fugax, embolus, carotid artery stenosis, central retinal vein occlusion; visual impairment/blindness, night blindness<br>
+  <i>traumatic and mechanical disorders</i><br>
+  black eye; burn of the eye and adnexa; corneal abrasion, ulcer; dislocated lens; foreign body in eye; hyphema; injury to optic nerve and pathways; laceration of the eye and eyelid; ocular open wounds; orbital fracture; subconjunctival hemorrhage<br>
+  <i>adverse effects of drugs on the eyes</i><br>
+  ethambutol; hydroxychloroquine; prednisone<br>
+  <b>Disorders of the ear</b>
+  <i>infectious and inflammatory disorders of the ear</i><br>
+  chondritis; mastoiditis; otitis externa, media, interna, serous, suppurative, malignant otitis externa<br>
+  <i>neoplasms</i><br>
+  acoustic neuroma, neurofibromatosis type 2; cholesteatoma<br>
+  <i>hearing loss/deafness</i><br>
+  hearing loss, including noise-induced; otosclerosis; tinnitus<br>
+  <i>disorders of balance and spatial orientation</i><br>
+  Ménière disease; motion sickness; vertigo, including benign positional vertigo<br>
+  <i>traumatic and mechanical disorders</i><br>
+  barotrauma; foreign body in ear; impacted cerumen; laceration, avulsion; perforation of tympanic membrane; eustachian
+tube disorders<br>
+  <i>adverse effects of drugs on the ear</i><br>
+  antineoplastic agents, including cisplatin; aminoglycosides; furosemide; salicylates<br>
