--- a/PPOM.html
+++ b/PPOM.html
@@ -56,5 +56,6 @@ benefits, placebos, alternative therapies, conflict of interest, and vulnerable
     <b>Physician misconduct, including duty to report physician misconduct</b><br>
     <b>Referrals</b><br>
     <b>Cultural issues not otherwise coded</b>
+    <b>Multiple Trauma (e.g. prioritization, blast injury involving more than one organ system)</b><br>
 </body>
 </html>
