--- a/physiology.html
+++ b/physiology.html
@@ -3,7 +3,10 @@
 <title>Physiology</title>
 </head>
 <body>
-<h1><center>Physiology</center></h1>
+<h1><center>Physiology</center></h1><br>
+  <h2>Cell Physiology</h2><br>
+  <b> Cell Membranes</b><br>
+  <b>Transport Across Cell Membranes</b><br>
   Which of the following characteristics is shared by simple and facilitated diffusion of glucose?
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -18,7 +21,7 @@
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. Both types of transport occur down an electrochemical gradient and do not require metabolic energy. Saturability and inhibition by other sugars are characteristic only of carrier-mediated glucose transport; thus, facilitated diffusion is saturable and inhibited by galactose, whereas simple diffusion is not.</p><br>
-  During the upstroke of the nerve action potential
+ During the upstroke of the nerve action potential
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. There is net outward current and the cell interior becomes more negative</label><br>
@@ -32,7 +35,23 @@ Answer: <p style="color:white"> A. Both types of transport occur down an electro
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. During the upstroke of the action potential, the cell depolarizes or becomes less negative. The depolarization is caused by inward current, which is, by definition, the movement of positive charge into the cell. In nerve and in most types of muscle, the inward current is carried by Na+. </p><br>
-Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
+  <b>Osmosis</b><br>
+  In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 150mM NaCl</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 300 mM mannitol</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 350 mM mannitol</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 300 mM urea</label><br> <input type="radio" id="E" name="1" value="E">
+    <label for="other"> E. 150mM CaCl<sub>2</sub></label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by entry of water and swelling of the cells to the point of rupture. Water would flow into the RBCs if the ECF became hypotonic (lower osmotic pressure) relative to the ICF. Definitionally, isotonic solutions do not cause water to flow in or out of cells because the osmotic pressure is the same on both sides of the cell membrane. Hypertonic solutions would cause shrinkage of the RBCs. 150mM NaCl and 300 mM mannitol are isotonic. 350mM mannitol and 150mM CaCl<sub>2</sub> are hypertonic. Because the reflection coefficient of urea is <1.00, 300mM urea is hypotonic.</p>
+  <b>Diffusion Potential, Resting Membrane Potential, and Action Potential </b><br>
+  Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. K+ ions will diffuse from solution A to solution B until the [K+] of both solutions is 50.5 mM.</label><br>
@@ -46,6 +65,7 @@ Solutions A and B are separated by a semipermeable membrane that is permeable to
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ ions, K+ will diffuse down its concentration gradient from solution A to solution B, leaving some Cl- ions behind in solution A. A diffusion potential will be created, with solution A negative with respect to solution B. Generation of a diffusion potential involves moement of only a few ions and, therefore, does not cause a change in the concentration of the bulk solutions. </p><br>
+  <b>Neuromuscular and synaptic transmission</b><br>
   The correct temporal sequence for events at the neuromuscular junction is
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -60,7 +80,9 @@ Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ 
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> B. Acetylcholine is stored in vesicles and released when an AP in the motor nerve opens Ca++ channels in the presynaptic terminal. ACh diffuses across the synaptic cleft and opens Na+ and K+ channels in the muscle end plate, depolarizing it (but not producing an action potential). Depolarization of the muscle end plate causes local currents in adjacent muscle membrane, depolarizing the membrane to threshold and producing action potentials.</p>
-Which characteristic or component is shared by skeletal muscle and smooth muscle?
+  <b>Skeletal Muscle</b><br>
+  <b>Smooth Muscle</b><br>
+  Which characteristic or component is shared by skeletal muscle and smooth muscle?
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Thick and thin filaments arranged in sarcomeres</label><br>
@@ -129,19 +151,62 @@ Answer: <p style="color:white"> D. Solution A is -30mV. The membrane is permeabl
 </form> 
 Answer: <p style="color:white"> B. Myasthenia gravis is characterized by a decreased density of ACh receptors at the muscle end plate. An AChE inhibitor blocks degradation of ACh in the neuromuscular junction, so levels at the muscle end plate remain high, partially compensating for the deficiency of receptors.</p>
  <br>
-  In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
-  <form>
-  <input type="radio" id="A" name="1" value="A">
-  <label for="male"> A. 150mM NaCl</label><br>
-  <input type="radio" id="B" name="1" value="B">
-  <label for="female"> B. 300 mM mannitol</label><br>
-  <input type="radio" id="C" name="1" value="C">
-  <label for="other"> C. 350 mM mannitol</label><br>
-  <input type="radio" id="D" name="1" value="D">
-  <label for="other"> D. 300 mM urea</label><br> <input type="radio" id="E" name="1" value="E">
-    <label for="other"> E. 150mM CaCl<sub>2</sub></label><br> <input type="radio" id="F" name="1" value="F">
-  <label for="other"> F. </label><br>
-</form> 
-Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by entry of water and swelling of the cells to the point of rupture. Water would flow into the RBCs if the ECF became hypotonic (lower osmotic pressure) relative to the ICF. Definitionally, isotonic solutions do not cause water to flow in or out of cells because the osmotic pressure is the same on both sides of the cell membrane. Hypertonic solutions would cause shrinkage of the RBCs. 150mM NaCl and 300 mM mannitol are isotonic. 350mM mannitol and 150mM CaCl<sub>2</sub> are hypertonic. Because the reflection coefficient of urea is <1.00, 300mM urea is hypotonic.</p>
-</body>
+    <b>Comparison of Skeletal Muscle, Smooth Muscle, and Cardiac Muscle</b><br>
+  <h2>Neurophysiology</h2><br>
+  <b>Autonomic Nervous System</b><br>
+  <b>Sensory Systems</b><br>
+  <b>Motor Systems</b><br>
+  <b>Higher Functions of the Cerebral Cortex</b><br>
+  <b>Blood-Brain Barrier and Cerebrospinal Fluid (CSF)</b><br>
+  <b>Temperature Regulation</b><br>
+  <h2>Cardiovascular Physiology</h2><br>
+  <b>Circuitry of the Cardiovascular System</b><br>
+  <b>Hemodynamics</b><br>
+  <b>Cardiac Electrophysiology</b><br>
+  <b>Cardiac Muscle and Cardiac Output</b><br>
+  <b>Cardiac Cycle</b><br>
+  <b>Regulation of Arterial Pressure</b><br>
+  <b>Microcirculation and Lymph</b><br>
+  <b>Special Circulations</b><br>
+  <b>Integrative Functions of the Cardiovascular System: Gravity, Exercise, and Hemorrhage</b><br>
+  <h2>Respiratory Physiology</h2><br>
+  <b>Lung Volumes and Capacities</b><br>
+  <b>Mechanics of breathing</b><br>
+  <b>Gas Exchange</b><br>
+  <b>Oxygen Transport</b><br>
+  <b>CO<sub>2</sub> Transport</b><br>
+  <b>Pulmonary Circulation</b><br>
+  <b>V/Q Defects</b><br>
+  <b>Control of Breathing</b><br>
+  <b>Integrated Responses of the Respiratory System</b><br>
+  <h2>Renal and Acid-Base Physiology</h2><br>
+  <b>Body Fluids</b><br>
+  <b>Renal Clearance, Renal Blood Flow, and Glomerular Filtration Rate</b><br>
+  <b>Reabsorption and Secretion</b><br>
+  <b>NaCl Regulation</b><br>
+  <b>K+ Regulation</b><br>
+  <b>Renal Regulation of Urea, Phosphate, Calcium, and Magnesium</b><br>
+  <b>Concentration and Dilution of Urine</b><br>
+  <b>Renal Hormones</b><br>
+  <b>Acid-Base Balance</b><br>
+  <b>Diuretics</b><br>
+  <h2>Gastrointestinal Physiology</h2><br>
+  <b>Structure and Innervation of the Gastrointestinal Tract</b><br>
+  <b>Regulatory Substances in the Gastrointestinal Tract</b><br>
+  <b>Gastrointestinal Motility</b><br>
+  <b>Gastrointestinal Secretion</b><br>
+  <b>Digestion and Absorption</b><br>
+  <b>Liver Physiology</b><br>
+  <h2>Endocrine Physiology</h2>
+  <b>Overview of Hormones</b><br>
+  <b>Cell Mechanisms and Second Messengers</b><br>
+  <b>Pituitary Gland (Hypophysis)</b><br>
+  <b>Thyroid Gland</b><br>
+  <b>Adrenal Cortex and Adrenal Medulla</b><br>
+  <b>Endocrine Pancreas-Glucagon and Insulin</b><br>
+  <b>Calcium Metabolism (Parathyroid Hormone, Vitamin D, Calcitonin)</b><br>
+  <b>Sexual Differentiation</b><br>
+  <b>Male Reproduction</b><br>
+  <b>Female Reproduction</b><br>
+  </body>
 </html>
