--- a/physiology.html
+++ b/physiology.html
@@ -6,6 +6,20 @@
 <h1><center>Physiology</center></h1><br>
   <h2>Cell Physiology</h2><br>
   <b> Cell Membranes</b><br>
+  A muscle cell has an intracellular [Na+] of 14mM and an extracellular [Na+] of 140mM. Assuming that 2.3RT/F = 60mV, what would the membrane potential be if the muscle cell membrane were permeable only to Na+?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. -80 mV</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. -60mV</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 0 mV</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 60mV </label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 80mV </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. The Nernst equation is used to calculate the equilibrium concentration for a single ion. In applying the Nernst equation, we assume that the membrane is freely permeable to taht ion alone. E<sub>Na+</sub> = 2.3RT/zF log C<sub>e</sub>/C<sub>i</sub> = 60mV log 140/14 = 60 mV log10 = 60mV. Notice that the signs were ignored and that the higher concentration was simply placed in the numerator to simplify the log calculation. To determine whether E<sub>Na+</sub> is positive or negative, use the intuitive approach: Na+ will diffuse from extracellualar to intracellular fluid down its concentration gradient, making the cell interior positive.</p>
   <b>Transport Across Cell Membranes</b><br>
   Which of the following characteristics is shared by simple and facilitated diffusion of glucose?
   <form>
@@ -21,21 +35,7 @@
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. Both types of transport occur down an electrochemical gradient and do not require metabolic energy. Saturability and inhibition by other sugars are characteristic only of carrier-mediated glucose transport; thus, facilitated diffusion is saturable and inhibited by galactose, whereas simple diffusion is not.</p><br>
- During the upstroke of the nerve action potential
-  <form>
-  <input type="radio" id="A" name="1" value="A">
-  <label for="male"> A. There is net outward current and the cell interior becomes more negative</label><br>
-  <input type="radio" id="B" name="1" value="B">
-  <label for="female"> B. There is net outward current and the cell interior becomes less negative </label><br>
-  <input type="radio" id="C" name="1" value="C">
-  <label for="other"> C. There is net inward current and the cell interior becomes more negative</label><br>
-  <input type="radio" id="D" name="1" value="D">
-  <label for="other"> D. There is net inward current and the cell interior becomes less negative</label><br> <input type="radio" id="E" name="1" value="E">
-  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
-  <label for="other"> F. </label><br>
-</form> 
-Answer: <p style="color:white"> D. During the upstroke of the action potential, the cell depolarizes or becomes less negative. The depolarization is caused by inward current, which is, by definition, the movement of positive charge into the cell. In nerve and in most types of muscle, the inward current is carried by Na+. </p><br>
-  <b>Osmosis</b><br>
+   <b>Osmosis</b><br>
   In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -50,6 +50,20 @@ Answer: <p style="color:white"> D. During the upstroke of the action potential, 
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by entry of water and swelling of the cells to the point of rupture. Water would flow into the RBCs if the ECF became hypotonic (lower osmotic pressure) relative to the ICF. Definitionally, isotonic solutions do not cause water to flow in or out of cells because the osmotic pressure is the same on both sides of the cell membrane. Hypertonic solutions would cause shrinkage of the RBCs. 150mM NaCl and 300 mM mannitol are isotonic. 350mM mannitol and 150mM CaCl<sub>2</sub> are hypertonic. Because the reflection coefficient of urea is <1.00, 300mM urea is hypotonic.</p>
+  Solutions A and B are separated by a membrane that is permeable to urea. Solution A is 10mM urea, and solution B is 5mM urea. If the concentration in urea in solution A is doubled, the flux of urea across the membrane will <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. double</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. triple</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. be unchanged</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. decrease to one-half</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. decrease to one-third</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">B. Flux is proportional to the concentration difference across the membrane, J = -PA(C<sub>A</sub>-C<sub>B</sub>). Originally, C<sub>A</sub> - C<sub>B</sub> = 10mM-5mM = 5mM. When the urea concentration was doubled in solution A, the concentration difference became 20mM-5mM = 15mM or 3 times the original difference. Therefore, the flux would also triple. Note that the negative sign preceding the equation is ignored if the lower concentration is subtracted from the higher concentration.</p>
   <b>Diffusion Potential, Resting Membrane Potential, and Action Potential </b><br>
   Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
   <form>
@@ -65,7 +79,21 @@ Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by ent
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ ions, K+ will diffuse down its concentration gradient from solution A to solution B, leaving some Cl- ions behind in solution A. A diffusion potential will be created, with solution A negative with respect to solution B. Generation of a diffusion potential involves moement of only a few ions and, therefore, does not cause a change in the concentration of the bulk solutions. </p><br>
-   Solutions A and B are separated by a membrane that is permeable to Ca++ and impermeable to Cl-. Solution A contains 10mM CaCl<sub>2</sub> and solution B contains 1mM CaCl<sub>2</sub>. Assuming that 2.3RT/F = 60mV, Ca++ will be at electrochemical equilibrium when
+  During the upstroke of the nerve action potential
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. There is net outward current and the cell interior becomes more negative</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. There is net outward current and the cell interior becomes less negative </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. There is net inward current and the cell interior becomes more negative</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. There is net inward current and the cell interior becomes less negative</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. During the upstroke of the action potential, the cell depolarizes or becomes less negative. The depolarization is caused by inward current, which is, by definition, the movement of positive charge into the cell. In nerve and in most types of muscle, the inward current is carried by Na+. </p><br>
+  Solutions A and B are separated by a membrane that is permeable to Ca++ and impermeable to Cl-. Solution A contains 10mM CaCl<sub>2</sub> and solution B contains 1mM CaCl<sub>2</sub>. Assuming that 2.3RT/F = 60mV, Ca++ will be at electrochemical equilibrium when
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Solution A is +60mV </label><br>
@@ -85,7 +113,66 @@ Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ 
     <label for="other"> H. The concentration of the two solutions are equal.</label><br>
 </form> 
 Answer: <p style="color:white"> D. Solution A is -30mV. The membrane is permeable to Ca++ but impermeable to Cl-. Although there is a concentration gradient across the membrane for both ions, only Ca++ can diffuse down this gradient. Ca++ will diffuse from solution A to solution B, leaving negative charge behind in solution A. The magnitude of this voltage can be calculated for electrochemical equilibrium with the Nernst equation as follows: E<sub>Ca++</sub> = 2.3RT/zF log C<sub>A</sub>/C<sub>B</sub> = 60mV/+2 log10 mM/1mM = 30mV log 10 = 30 mV. The sign is determined with an intuitive approach: Ca++ diffuses from solution A to solution B, so solution A develops a negative voltage (-30mV) Net diffusion of Ca++ will cease when this voltage is achieved; that is, when the chemical driving force is exactly balanced by the electrical driving force.</p><br>
-
+During a nerve action potential, a stimulus is delivered as indicated by the arrow shown in the following figure. In response to the stimulus, a second action potential<br>
+  <img src="PhysAP1.png"><br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. of smaller magnitude will occur</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. of normal magnitude will occur</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. of normal magnitude will occur but will be delayed</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. will occur but will not have an overshoot</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Will not occur</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">E. Because the stimulus was delivered during the absolute refractory period, no action potential occurs. The inactivation gates of the Na+ channel were closed by depolariation and remain closed until the membrane is reolarized. As long as the inactivation gates are closed, the Na+ channels cannot be opened to allow for another action potential. </p>
+  At which labeled point on the action potential is K+ closest to electrochemical equilibrium?<br>
+  <img src="PhysAP2.png"><br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 2</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 3</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 4</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 5</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">E. The hyperpolarizing afterpotential represents the period during which K+ permeability is highest, and the membrane potential is closest to the K+ equilibrium potential. At that point, K+ is closest to electrochemical equilibrium The force driving K+ movement out of the cell down its chemical gradient is balanced by the force driving K+ into the cell down its electrical gradient. </p>
+  What process is responsible for the change in membrane potential that occurs between point 1 and point 3?<br>
+  <img src="PhysAP2.png"><br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Movement of Na+ into the cell</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Movement of Na+ out of the cell</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Movement of K+ into the cell</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Movement of K+ out of the cell</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Activation of the Na+-K+ pump</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Inhibition of the Na+-K+ pump</label><br>
+</form> 
+Answer: <p style="color:white">A. The upstroke of the nerve action potential is caused by opening of the Na+ channels once the membrane is depolarized to threshold. When the Na+ channels open, Na+ moves into the cell down its electrochemical gradient, driving the membrane potential toward the Na+ equilibrium potential. </p>
+What process is responsible for the change in membrane potential that occurs between point 3 and point 4? <br>
+<img src="PhysAP2.png"><br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Movement of Na+ into the cell</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Movement of Na+ out of the cell</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Movement of K+ into the cell</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Movement of K+ out of the cell</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Activation of the Na+-K+ pump</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Inhibition of the Na+-K+ pump</label><br>
+</form> 
+Answer: <p style="color:white"> D. The process responsible for repolarization is the opening of K+ channels. The K+ permeability becomes very high and drives the membrane potential toward the K+ equilibrium by flow of K+ out of the cell.</p>
   <b>Neuromuscular and synaptic transmission</b><br>
   The correct temporal sequence for events at the neuromuscular junction is
   <form>
