--- a/physiology.html
+++ b/physiology.html
@@ -35,7 +35,35 @@ Answer: <p style="color:white"> D. The Nernst equation is used to calculate the 
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. Both types of transport occur down an electrochemical gradient and do not require metabolic energy. Saturability and inhibition by other sugars are characteristic only of carrier-mediated glucose transport; thus, facilitated diffusion is saturable and inhibited by galactose, whereas simple diffusion is not.</p><br>
-   <b>Osmosis</b><br>
+  Transport of D- and L-glucose proceeds at the same rate down an electrochemical gradient by which of the following processes? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Simple diffusion</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Facilitated diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Primary active transport</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Cotransport</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Countertransport</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">A. Only two types of transport occur downhill: simple and facilitated diffusion. If there is no stereospecificity for the D- or L-isomer, one can conclude that the transport is not carrier-mediated and therefore, must be simple diffusion. </p>
+Which of the following will double the permeability of a solute in a lipid bilayer?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Doubling the molecular radius of the solute</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Doubling the oil/water partition coefficient of the solute</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Doubling the thickness of the bilayer</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Doubling the concentration difference of the solute across the bilayer</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">B. Increasing the oil/water partition coefficient increases solubility in a lipid bilayer and therefore increases ermeability. Increasing molecular radius and membrane thickness decrease ermeability. The concentration difference of the solute has no effect on solubility. </p>
+  <b>Osmosis</b><br>
   In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -64,6 +92,20 @@ Answer: <p style="color:white"> D. Lysis of the patient's RBCs was caused by ent
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white">B. Flux is proportional to the concentration difference across the membrane, J = -PA(C<sub>A</sub>-C<sub>B</sub>). Originally, C<sub>A</sub> - C<sub>B</sub> = 10mM-5mM = 5mM. When the urea concentration was doubled in solution A, the concentration difference became 20mM-5mM = 15mM or 3 times the original difference. Therefore, the flux would also triple. Note that the negative sign preceding the equation is ignored if the lower concentration is subtracted from the higher concentration.</p>
+  Solutions A and B are separated by a semipermeable membrane. Solution A contains 1mM sucrose and 1mM urea. Solution B contains 1mM sucrose. The reflection coefficient for sucrose is one, and the reflection coefficient for urea is zero. Which of the following statements about these solutions is correct?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Solution A has a higher effective osmotic pressure than solution B</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Solution A has a lower effective osmotic pressure than solution B</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Solutions A and B are isoosmotic.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Solution is hyperosmotic with respect to solution B, and the solutions are isotonic.</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Solution A is hypoosmotic with respect to solution B, and the solutions are isotonic.</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Solution A contains both sucrose and urea at concentrations of 1mM, whereas solution B contains only sucrose at a concentration of 1mM. The calculated osmolarity of solution A is 2mOsm/L, and the calculated osmolarity of solution B is 1mOsm/L. Therefore solution A, which has a higher osmolarity, is hyperosmotic with respect to solution B, but have the same effective osmotic pressure (isotonic) because the only "effective" solute is sucrose, which has the same concentration in both solutions. Urea is not an effective solute because its reflection coefficient is zero. </p>
   <b>Diffusion Potential, Resting Membrane Potential, and Action Potential </b><br>
   Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
   <form>
@@ -79,6 +121,20 @@ Answer: <p style="color:white">B. Flux is proportional to the concentration diff
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ ions, K+ will diffuse down its concentration gradient from solution A to solution B, leaving some Cl- ions behind in solution A. A diffusion potential will be created, with solution A negative with respect to solution B. Generation of a diffusion potential involves moement of only a few ions and, therefore, does not cause a change in the concentration of the bulk solutions. </p><br>
+ The velocity of conduction of action potentials along a nerve will be increased by <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. stimulating the Na+-K+ pump</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. inhibiting the Na+-K+ pump</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. decreasing the diameter of the nerve</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. myelinating the nerve</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. lengthening the nerve fiber</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Myelin insulates the nerve, thereby increasing conduction velocity: APs can only be generated at the nodes of Ranvier, where there are breaks in the insulation. Activity of the Na+/K+ pump does not directly affect the formation or conduction of AP. Decreasing nerve diameter would increase internal resistance and slow the conduction velocity. </p>
   During the upstroke of the nerve action potential
   <form>
   <input type="radio" id="A" name="1" value="A">
